# ai-center-v3

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
doc/: 02、文档解析、chunk、向量库.md
scripts/: backfill_metadata.py  index_document_api.py  init_collections.py  reindex_all.py
src/: __init__.py  main.py
src/api/: deps.py
src/api/routers/: documents.py  jobs.py  rag.py  search.py
src/config/: constants.py  settings.py
src/embeddings/: base.py  factory.py  service.py
src/indexing/: service.py  upsert.py  vector_store.py
src/infra/: db.py  litellm_client.py  qdrant.py
src/ingestion/: __init__.py  dedup.py  mime_detect.py  service.py  source_resolver.py
src/models/: chunk.py  document.py  job.py
src/processing/: __init__.py
src/processing/chunking/: __init__.py
src/processing/loaders/: base.py  docling_loader.py
src/processing/normalize/: metadata.py  validators.py
src/rag/: answer_chain.py  prompt_builder.py  service.py
src/repositories/: chunk_repo.py  document_repo.py  job_repo.py
src/retrieval/: filters.py  query_plan.py  rerank.py  retriever_factory.py  service.py
src/schemas/: document.py  job.py  rag.py  search.py
src/utils/: ids.py
src/workflows/: ingestion_graph.py  reindex_graph.py  state.py
tests/: conftest.py
tests/api/: test_app.py  test_documents.py  test_rag.py
tests/processing/: test_source_resolver.py
tests/retrieval/: test_filters.py
